--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/glob": "^0.1.1",
-    "@actions/utils": "git+https://github.com/drugscom/actions-utils.git"
+    "@actions/utils": "git+https://github.com/drugscom/actions-utils.git",
+    "aws-sdk": "^2.913.0",
+    "simple-git": "^2.39.0"
   },
   "private": true,
   "devDependencies": {
