--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@actions/glob": "^0.1.2",
     "@actions/utils": "git+https://github.com/drugscom/actions-utils.git",
     "aws-sdk": "^2.917.0",
+    "dependency-graph": "^0.11.0",
     "simple-git": "^2.39.0"
   },
   "private": true,
