--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
     directory: /
     schedule:
       interval: daily
+    ignore:
+      - dependency-type: development
+      - dependency-name: aws-sdk
+        update-types: [version-update:semver-patch]
