--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,4 +10,4 @@ updates:
       - dependency-type: production
     ignore:
       - dependency-name: aws-sdk
-        update-types: [version-update:semver-patch]
+        update-types: ["version-update:semver-patch"]
