--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,6 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: daily
+      interval: monthly
     allow:
       - dependency-type: production
-    ignore:
-      - dependency-name: aws-sdk
-        update-types: ["version-update:semver-patch"]
